# django-custom-user

./: README.md  pyproject.toml
server/: settings.py  urls.py
templates/: _base.html
templates/account/: login.html  signup.html
templates/partials/: _navbar.html
templates/test_app/: home.html
test_app/: views.py
users/: admin.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py
