[tool.poetry]
name = "django-custom-user"
version = "0.1.0"
description = ""
authors = ["Leo Kukharau <kuhorev.leonid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
django-environ = "^0.4.5"
django-allauth = "^0.42.0"
django-crispy-forms = "^1.9.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pylint-django = "^2.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
